--- a/templates/profile.html
+++ b/templates/profile.html
@@ -106,6 +106,53 @@
                         </div>
                         <div class="info">
                             <div class="bio-title">Информация</div>
+                            <div class="info-block">
+                                <div class="item">
+                                    <div class="icon">
+                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path opacity="0.2" d="M21.0005 5.25L12.0005 13.5L3.00049 5.25H21.0005Z" fill="#4ADE80"/>
+                                        <path d="M21 5.25L12 13.5L3 5.25" stroke="#4ADE80" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M3 5.25H21V18C21 18.1989 20.921 18.3897 20.7803 18.5303C20.6397 18.671 20.4489 18.75 20.25 18.75H3.75C3.55109 18.75 3.36032 18.671 3.21967 18.5303C3.07902 18.3897 3 18.1989 3 18V5.25Z" stroke="#4ADE80" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M10.3636 12L3.2312 18.538" stroke="#4ADE80" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M20.7688 18.5381L13.6364 12" stroke="#4ADE80" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </div>
+                                    <div class="text">
+                                        <div class="count">EMAIL</div>
+                                        <div class="value">kolya.tregubin@yandex.ru</div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="icon">
+                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path opacity="0.2" d="M21.0005 5.25L12.0005 13.5L3.00049 5.25H21.0005Z" fill="#4ADE80"/>
+                                        <path d="M21 5.25L12 13.5L3 5.25" stroke="#4ADE80" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M3 5.25H21V18C21 18.1989 20.921 18.3897 20.7803 18.5303C20.6397 18.671 20.4489 18.75 20.25 18.75H3.75C3.55109 18.75 3.36032 18.671 3.21967 18.5303C3.07902 18.3897 3 18.1989 3 18V5.25Z" stroke="#4ADE80" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M10.3636 12L3.2312 18.538" stroke="#4ADE80" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M20.7688 18.5381L13.6364 12" stroke="#4ADE80" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </div>
+                                    <div class="text">
+                                        <div class="count">EMAIL</div>
+                                        <div class="value">kolya.tregubin@yandex.ru</div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="icon">
+                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path opacity="0.2" d="M21.0005 5.25L12.0005 13.5L3.00049 5.25H21.0005Z" fill="#4ADE80"/>
+                                        <path d="M21 5.25L12 13.5L3 5.25" stroke="#4ADE80" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M3 5.25H21V18C21 18.1989 20.921 18.3897 20.7803 18.5303C20.6397 18.671 20.4489 18.75 20.25 18.75H3.75C3.55109 18.75 3.36032 18.671 3.21967 18.5303C3.07902 18.3897 3 18.1989 3 18V5.25Z" stroke="#4ADE80" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M10.3636 12L3.2312 18.538" stroke="#4ADE80" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M20.7688 18.5381L13.6364 12" stroke="#4ADE80" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </div>
+                                    <div class="text">
+                                        <div class="count">EMAIL</div>
+                                        <div class="value">kolya.tregubin@yandex.ru</div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                        
                     </div>
@@ -117,11 +164,83 @@
         <div class="manipulation">
             <div class="title">ПАНЕЛЬ УПРАВЛЕНИЯ</div>
             <ul>
-                <li><a href="#!">Главная</a></li>
-                <li><a href="#!">Задачи</a></li>
-                <li><a href="#!">Сотрудники</a></li>
+                <li>
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M16.875 16.875V9.02642C16.875 8.93934 16.8568 8.85322 16.8216 8.77358C16.7863 8.69395 16.7349 8.62255 16.6704 8.56397L10.42 2.88154C10.3049 2.77694 10.155 2.71899 9.99955 2.71899C9.84406 2.719 9.69415 2.77696 9.57911 2.88157L3.32954 8.56397C3.26511 8.62255 3.21364 8.69395 3.17842 8.77358C3.14319 8.85321 3.125 8.93932 3.125 9.0264V16.875" stroke="#626C70" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M1.25 16.875H18.75" stroke="#626C70" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M11.8745 16.8743V12.4993C11.8745 12.3336 11.8087 12.1746 11.6915 12.0574C11.5742 11.9402 11.4153 11.8743 11.2495 11.8743H8.74951C8.58375 11.8743 8.42478 11.9402 8.30757 12.0574C8.19036 12.1746 8.12451 12.3336 8.12451 12.4993V16.8743" stroke="#626C70" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    <a href="#!">Главная</a>
+                </li>
+                <li>
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M7.5 11.875H12.5" stroke="#626C70" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M7.5 9.375H12.5" stroke="#626C70" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M12.5002 3.125H15.625C15.7908 3.125 15.9497 3.19085 16.0669 3.30806C16.1842 3.42527 16.25 3.58424 16.25 3.75V16.875C16.25 17.0408 16.1842 17.1997 16.0669 17.3169C15.9497 17.4342 15.7908 17.5 15.625 17.5H4.375C4.20924 17.5 4.05027 17.4342 3.93306 17.3169C3.81585 17.1997 3.75 17.0408 3.75 16.875V3.75C3.75 3.58424 3.81585 3.42527 3.93306 3.30806C4.05027 3.19085 4.20924 3.125 4.375 3.125H7.49983" stroke="#626C70" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M6.875 5.625V5C6.875 4.1712 7.20424 3.37634 7.79029 2.79029C8.37634 2.20424 9.1712 1.875 10 1.875C10.8288 1.875 11.6237 2.20424 12.2097 2.79029C12.7958 3.37634 13.125 4.1712 13.125 5V5.625H6.875Z" stroke="#626C70" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>                        
+                    <a href="#!">Задачи</a>
+                </li>
+                <li>
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_2066_1344)">
+                        <g filter="url(#filter0_d_2066_1344)">
+                        <path d="M14.1667 17.5V15.8333C14.1667 14.9493 13.8155 14.1014 13.1904 13.4763C12.5653 12.8512 11.7174 12.5 10.8334 12.5H4.16671C3.28265 12.5 2.43481 12.8512 1.80968 13.4763C1.18456 14.1014 0.833374 14.9493 0.833374 15.8333V17.5M19.1667 17.5V15.8333C19.1662 15.0948 18.9203 14.3773 18.4678 13.7936C18.0154 13.2099 17.3818 12.793 16.6667 12.6083M13.3334 2.60833C14.0504 2.79192 14.6859 3.20892 15.1397 3.79359C15.5936 4.37827 15.8399 5.09736 15.8399 5.8375C15.8399 6.57764 15.5936 7.29673 15.1397 7.88141C14.6859 8.46608 14.0504 8.88308 13.3334 9.06667M10.8334 5.83333C10.8334 7.67428 9.34099 9.16667 7.50004 9.16667C5.65909 9.16667 4.16671 7.67428 4.16671 5.83333C4.16671 3.99238 5.65909 2.5 7.50004 2.5C9.34099 2.5 10.8334 3.99238 10.8334 5.83333Z" stroke="#626C70" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round" shape-rendering="crispEdges"/>
+                        </g>
+                        </g>
+                        <defs>
+                        <filter id="filter0_d_2066_1344" x="-3.79163" y="1.875" width="27.5834" height="24.25" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                        <feOffset dy="4"/>
+                        <feGaussianBlur stdDeviation="2"/>
+                        <feComposite in2="hardAlpha" operator="out"/>
+                        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_2066_1344"/>
+                        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_2066_1344" result="shape"/>
+                        </filter>
+                        <clipPath id="clip0_2066_1344">
+                        <rect width="20" height="20" fill="white"/>
+                        </clipPath>
+                        </defs>
+                        </svg>                        
+                    <a href="#!">Сотрудники</a>
+                </li>
             </ul>
         </div>
+        <div class="pages">
+            <div class="accordion-container">
+                <div class="accordion-item">
+                    <div class="accordion-header active">
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M16.6667 17.5V15.8333C16.6667 14.9493 16.3155 14.1014 15.6904 13.4763C15.0653 12.8512 14.2174 12.5 13.3334 12.5H6.66671C5.78265 12.5 4.93481 12.8512 4.30968 13.4763C3.68456 14.1014 3.33337 14.9493 3.33337 15.8333V17.5M13.3334 5.83333C13.3334 7.67428 11.841 9.16667 10 9.16667C8.15909 9.16667 6.66671 7.67428 6.66671 5.83333C6.66671 3.99238 8.15909 2.5 10 2.5C11.841 2.5 13.3334 3.99238 13.3334 5.83333Z" stroke="#4ADE80" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <div class="title">Profile</div>
+                        </div>
+                    <div class="accordion-content" style="display: flex;">            
+                        <div class="title active">Profile</div>
+                        <div class="title">Setting</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M17.5 4.375H2.5C2.15482 4.375 1.875 4.65482 1.875 5V15C1.875 15.3452 2.15482 15.625 2.5 15.625H17.5C17.8452 15.625 18.125 15.3452 18.125 15V5C18.125 4.65482 17.8452 4.375 17.5 4.375Z" stroke="#626C70" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M13.1245 13.125H15.6245" stroke="#626C70" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M9.37451 13.125H10.6245" stroke="#626C70" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M1.87451 7.56665H18.1245" stroke="#626C70" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            <div class="title">Billing</div>
+                            </div>
+                    <div class="accordion-content">
+                        <div class="title">Billing Item</div>
+                        <div class="title">Billing Item</div>
+                        <div class="title">Billing Item</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    <script type="module" src="../static/scripts/script.js"></script>
 </body>
 </html>
