--- a/static/styles/sections/profile-page/profile-main-section.scss
+++ b/static/styles/sections/profile-page/profile-main-section.scss
@@ -1,5 +1,5 @@
 .profile-main-section {
-    margin-left: 316px;
+    margin-left: 290px;
     .profile-main-block {
         .container-profile {
             display: grid;
@@ -77,6 +77,33 @@
                     font-size: 16px;
                     font-weight: 600;
                    }
+                .info-block{
+                    padding: 24px;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 24px;
+                    .item {
+                        display: flex;
+                        gap: 16px;
+                        .icon {
+                            padding: 3px;
+                        }
+                        .text {
+                            display: flex;
+                            flex-direction: column;
+                            gap: 4px;
+                            .count {
+                                font-weight: 600;
+                                color: #959FA3;
+                                font-size: 12px;
+                            }
+                            .value {
+                                font-size: 16px;
+                                color: #191B1C;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
