--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="../static/images/svg/favicon.svg" type="image/x-icon">
 </head>
 <body>
-    <!-- <header class="header sticky">
+    <header class="header sticky">
         <div class="container">
             <div class="header__logo">
                 <img src="../static/images/svg/logo.svg" alt="">
@@ -22,7 +22,7 @@
                 </a>
             </div>
         </div>
-    </header> -->
+    </header>
     <main class="p-24">
         <section>
             <div class="banner-section">
@@ -160,6 +160,24 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+             <div class="copyright">
+                 ©2023 Копировать информацию с сайта запрещено
+            </div>
+            <div class="links">
+                <a href="#!">
+                    <img src="../static/images/svg/basil_vk-outline.svg" alt="">
+                </a>
+                <a href="#!">
+                    <img src="../static/images/svg/ion_social-twitch-outline.svg" alt="">
+                </a>
+                <a href="#!">
+                    <img src="../static/images/svg/ri_twitter-line.svg" alt="">
+                </a>
+            </div>
+        </div>
+    </footer>
     <div class="sidebar">
         <div class="manipulation">
             <div class="title">ПАНЕЛЬ УПРАВЛЕНИЯ</div>
@@ -209,6 +227,7 @@
             </ul>
         </div>
         <div class="pages">
+            <div class="pages-title">страницы</div>
             <div class="accordion-container">
                 <div class="accordion-item">
                     <div class="accordion-header active">
@@ -216,7 +235,10 @@
                             <path d="M16.6667 17.5V15.8333C16.6667 14.9493 16.3155 14.1014 15.6904 13.4763C15.0653 12.8512 14.2174 12.5 13.3334 12.5H6.66671C5.78265 12.5 4.93481 12.8512 4.30968 13.4763C3.68456 14.1014 3.33337 14.9493 3.33337 15.8333V17.5M13.3334 5.83333C13.3334 7.67428 11.841 9.16667 10 9.16667C8.15909 9.16667 6.66671 7.67428 6.66671 5.83333C6.66671 3.99238 8.15909 2.5 10 2.5C11.841 2.5 13.3334 3.99238 13.3334 5.83333Z" stroke="#4ADE80" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                         <div class="title">Profile</div>
-                        </div>
+                        <svg class="arrow" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M13 10L8 5L3 10" stroke="#191B1C" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>                            
+                    </div>
                     <div class="accordion-content" style="display: flex;">            
                         <div class="title active">Profile</div>
                         <div class="title">Setting</div>
@@ -236,6 +258,18 @@
                         <div class="title">Billing Item</div>
                         <div class="title">Billing Item</div>
                         <div class="title">Billing Item</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10 17.5C14.1421 17.5 17.5 14.1421 17.5 10C17.5 5.85786 14.1421 2.5 10 2.5C5.85786 2.5 2.5 5.85786 2.5 10C2.5 14.1421 5.85786 17.5 10 17.5Z" stroke="#626C70" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M10.3125 14.0625C10.3125 14.2351 10.1726 14.375 10 14.375C9.82741 14.375 9.6875 14.2351 9.6875 14.0625C9.6875 13.8899 9.82741 13.75 10 13.75C10.1726 13.75 10.3125 13.8899 10.3125 14.0625Z" fill="#626C70" stroke="#626C70" stroke-width="1.25"/>
+                            <path d="M9.99988 11.2504V10.6254C10.4325 10.6254 10.8555 10.4971 11.2152 10.2567C11.5749 10.0163 11.8553 9.6747 12.0209 9.27499C12.1864 8.87527 12.2298 8.43544 12.1453 8.01111C12.0609 7.58677 11.8526 7.197 11.5467 6.89107C11.2407 6.58514 10.851 6.3768 10.4266 6.2924C10.0023 6.20799 9.56247 6.25131 9.16276 6.41688C8.76304 6.58245 8.4214 6.86282 8.18104 7.22256C7.94067 7.58229 7.81238 8.00522 7.81238 8.43787" stroke="#626C70" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>                            
+                        <div class="title">FAQ</div>
+                    </div>
+                    <div class="accordion-content">
                     </div>
                 </div>
             </div>
