--- a/static/styles/sections/profile-page/banner-section.scss
+++ b/static/styles/sections/profile-page/banner-section.scss
@@ -2,6 +2,7 @@
     margin-left: 290px;
     border-radius: 8px;
     margin-bottom: 24px;
+    margin-top: 80px;
     .bannder-block {
         display: flex;
         flex-direction: column;
