--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,18 +8,10 @@
     <link rel="shortcut icon" href="../static/images/svg/favicon.svg" type="image/x-icon">
 </head>
 <body>
-    <header class="header sticky">
+    <header class="header sticky profile">
         <div class="container">
             <div class="header__logo">
                 <img src="../static/images/svg/logo.svg" alt="">
-            </div>
-            <div class="header__btn-block">
-                <a class="btn dark-black" href="./form.html">
-                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M13.3333 14V12.6667C13.3333 11.9594 13.0523 11.2811 12.5522 10.781C12.0521 10.281 11.3739 10 10.6666 10H5.33329C4.62605 10 3.94777 10.281 3.44767 10.781C2.94758 11.2811 2.66663 11.9594 2.66663 12.6667V14M10.6666 4.66667C10.6666 6.13943 9.47272 7.33333 7.99996 7.33333C6.5272 7.33333 5.33329 6.13943 5.33329 4.66667C5.33329 3.19391 6.5272 2 7.99996 2C9.47272 2 10.6666 3.19391 10.6666 4.66667Z" stroke="#F5F5F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>                        
-                    <span>Войти</span>
-                </a>
             </div>
         </div>
     </header>
@@ -102,7 +94,102 @@
                             </div>
                         </div>
                         <div class="last-activity">
-                            <div class="title">Последняя активность</div>
+                            <div class="bio-title">Последняя активность</div>
+                            <div class="last-item">
+                                <div class="user">
+                                    <div class="ava">
+                                        <img src="../static/images/photo-mini.png" alt="ava">
+                                    </div>
+                                    <div class="info">
+                                        <div class="desc">Николай Трегубин создаёт 3 новых ивента в Calendar with Urgent Label.</div>
+                                        <div class="date">10 min ago</div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="item-category">
+                                        <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <circle cx="5" cy="5" r="5" fill="#27272A"/>
+                                        </svg>                                            
+                                        <span>Urgents</span>
+                                    </div>
+                                    <div class="item-name">
+                                        Meeting with UI/UX Team to manage our  upcoming projects & task.
+                                    </div>
+                                    <div class="author">
+                                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M10 12.5C12.7614 12.5 15 10.2614 15 7.5C15 4.73858 12.7614 2.5 10 2.5C7.23858 2.5 5 4.73858 5 7.5C5 10.2614 7.23858 12.5 10 12.5Z" stroke="#27272A" stroke-width="1.25" stroke-miterlimit="10"/>
+                                            <path d="M2.42102 16.8743C3.18943 15.5442 4.29431 14.4398 5.62468 13.672C6.95505 12.9042 8.46405 12.5 10.0001 12.5C11.5361 12.5 13.0451 12.9043 14.3755 13.6721C15.7058 14.44 16.8107 15.5444 17.5791 16.8744" stroke="#27272A" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>                                            
+                                        <span>Николай Тригубин</span>
+                                    </div>
+                                    <div class="date">
+                                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M10.625 5.83337C10.625 5.4882 10.3452 5.20837 9.99998 5.20837C9.6548 5.20837 9.37498 5.4882 9.37498 5.83337V10C9.37498 10.2155 9.48599 10.4158 9.66873 10.53L12.1687 12.0925C12.4614 12.2755 12.847 12.1865 13.03 11.8938C13.2129 11.6011 13.1239 11.2155 12.8312 11.0325L10.625 9.65364V5.83337Z" fill="#27272A"/>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M9.99998 2.70837C5.9729 2.70837 2.70831 5.97296 2.70831 10C2.70831 14.0271 5.9729 17.2917 9.99998 17.2917C14.0271 17.2917 17.2916 14.0271 17.2916 10C17.2916 5.97296 14.0271 2.70837 9.99998 2.70837ZM3.95831 10C3.95831 6.66332 6.66326 3.95837 9.99998 3.95837C13.3367 3.95837 16.0416 6.66332 16.0416 10C16.0416 13.3368 13.3367 16.0417 9.99998 16.0417C6.66326 16.0417 3.95831 13.3368 3.95831 10Z" fill="#27272A"/>
+                                        </svg>
+                                        <span>14 Nov, 2021, 9:30 PM to 11:00 PM</span>
+                                    </div>
+                                    <div class="members">
+                                        <img src="../static/images/Members.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="item-category">
+                                        <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <circle cx="5" cy="5" r="5" fill="#27272A"/>
+                                        </svg>                                            
+                                        <span>Urgents</span>
+                                    </div>
+                                    <div class="item-name">
+                                        Meeting with UI/UX Team to manage our  upcoming projects & task.
+                                    </div>
+                                    <div class="author">
+                                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M10 12.5C12.7614 12.5 15 10.2614 15 7.5C15 4.73858 12.7614 2.5 10 2.5C7.23858 2.5 5 4.73858 5 7.5C5 10.2614 7.23858 12.5 10 12.5Z" stroke="#27272A" stroke-width="1.25" stroke-miterlimit="10"/>
+                                            <path d="M2.42102 16.8743C3.18943 15.5442 4.29431 14.4398 5.62468 13.672C6.95505 12.9042 8.46405 12.5 10.0001 12.5C11.5361 12.5 13.0451 12.9043 14.3755 13.6721C15.7058 14.44 16.8107 15.5444 17.5791 16.8744" stroke="#27272A" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>                                            
+                                        <span>Николай Тригубин</span>
+                                    </div>
+                                    <div class="date">
+                                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M10.625 5.83337C10.625 5.4882 10.3452 5.20837 9.99998 5.20837C9.6548 5.20837 9.37498 5.4882 9.37498 5.83337V10C9.37498 10.2155 9.48599 10.4158 9.66873 10.53L12.1687 12.0925C12.4614 12.2755 12.847 12.1865 13.03 11.8938C13.2129 11.6011 13.1239 11.2155 12.8312 11.0325L10.625 9.65364V5.83337Z" fill="#27272A"/>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M9.99998 2.70837C5.9729 2.70837 2.70831 5.97296 2.70831 10C2.70831 14.0271 5.9729 17.2917 9.99998 17.2917C14.0271 17.2917 17.2916 14.0271 17.2916 10C17.2916 5.97296 14.0271 2.70837 9.99998 2.70837ZM3.95831 10C3.95831 6.66332 6.66326 3.95837 9.99998 3.95837C13.3367 3.95837 16.0416 6.66332 16.0416 10C16.0416 13.3368 13.3367 16.0417 9.99998 16.0417C6.66326 16.0417 3.95831 13.3368 3.95831 10Z" fill="#27272A"/>
+                                        </svg>
+                                        <span>14 Nov, 2021, 9:30 PM to 11:00 PM</span>
+                                    </div>
+                                    <div class="members">
+                                        <img src="../static/images/Members.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="item-category">
+                                        <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <circle cx="5" cy="5" r="5" fill="#27272A"/>
+                                        </svg>                                            
+                                        <span>Urgents</span>
+                                    </div>
+                                    <div class="item-name">
+                                        Meeting with UI/UX Team to manage our  upcoming projects & task.
+                                    </div>
+                                    <div class="author">
+                                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M10 12.5C12.7614 12.5 15 10.2614 15 7.5C15 4.73858 12.7614 2.5 10 2.5C7.23858 2.5 5 4.73858 5 7.5C5 10.2614 7.23858 12.5 10 12.5Z" stroke="#27272A" stroke-width="1.25" stroke-miterlimit="10"/>
+                                            <path d="M2.42102 16.8743C3.18943 15.5442 4.29431 14.4398 5.62468 13.672C6.95505 12.9042 8.46405 12.5 10.0001 12.5C11.5361 12.5 13.0451 12.9043 14.3755 13.6721C15.7058 14.44 16.8107 15.5444 17.5791 16.8744" stroke="#27272A" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>                                            
+                                        <span>Николай Тригубин</span>
+                                    </div>
+                                    <div class="date">
+                                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M10.625 5.83337C10.625 5.4882 10.3452 5.20837 9.99998 5.20837C9.6548 5.20837 9.37498 5.4882 9.37498 5.83337V10C9.37498 10.2155 9.48599 10.4158 9.66873 10.53L12.1687 12.0925C12.4614 12.2755 12.847 12.1865 13.03 11.8938C13.2129 11.6011 13.1239 11.2155 12.8312 11.0325L10.625 9.65364V5.83337Z" fill="#27272A"/>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M9.99998 2.70837C5.9729 2.70837 2.70831 5.97296 2.70831 10C2.70831 14.0271 5.9729 17.2917 9.99998 17.2917C14.0271 17.2917 17.2916 14.0271 17.2916 10C17.2916 5.97296 14.0271 2.70837 9.99998 2.70837ZM3.95831 10C3.95831 6.66332 6.66326 3.95837 9.99998 3.95837C13.3367 3.95837 16.0416 6.66332 16.0416 10C16.0416 13.3368 13.3367 16.0417 9.99998 16.0417C6.66326 16.0417 3.95831 13.3368 3.95831 10Z" fill="#27272A"/>
+                                        </svg>
+                                        <span>14 Nov, 2021, 9:30 PM to 11:00 PM</span>
+                                    </div>
+                                    <div class="members">
+                                        <img src="../static/images/Members.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="info">
                             <div class="bio-title">Информация</div>
