--- a/static/styles/elements/header.scss
+++ b/static/styles/elements/header.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     transition: top 0.3s;
     background-color: $bg-primary-dark;
+    
     &.transparent {
         background-color: transparent;
         justify-content: start;
@@ -22,6 +23,11 @@
         left: 0;
         right: 0;
         z-index: 1000;
+        &.profile {
+            border-bottom: 1px #86EFAC solid;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+           }
+       
     }
    &__btn-block {
     display: flex;
@@ -31,4 +37,5 @@
     display: flex;
     align-items: center;
    }
+ 
 }
