--- a/static/styles/sections/profile-page/profile-main-section.scss
+++ b/static/styles/sections/profile-page/profile-main-section.scss
@@ -3,8 +3,7 @@
     .profile-main-block {
         .container-profile {
             display: grid;
-            grid-template-columns: repeat(4, minmax(0, 1fr));;
-
+            grid-template-columns: repeat(4, minmax(0, 1fr));
             gap: 24px;
             font-size: 14px;
             .bio {
@@ -66,6 +65,65 @@
             .last-activity {
                 grid-column: span 3;
                 grid-row: span 2;
+                background-color: #fff;
+                border-radius: 8px;
+                padding: 24px;
+                .bio-title {
+                    padding: 16px 24px;
+                    border-bottom: 1px solid #959fa352;
+                    font-size: 16px;
+                    font-weight: 600;
+                }
+                .last-item {
+                    grid-template-columns: repeat(3, minmax(0, 1fr));
+                    display: grid;
+                    gap: 18px;
+                    .user {
+                        grid-column: span 3;
+                        display: flex;
+                        align-items: center;
+                        margin-top: 24px;
+                        gap: 16px;
+
+                    }
+                    .item {
+                        padding: 20px;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 16px;
+                        background-color: #DCFCE7;
+                        border-radius: 8px;
+                        .item-category {
+                            display: flex;
+                            gap: 5px;
+                            align-items: center;
+                            span {
+                                font-size: 14px;
+                                font-weight: 500;
+                            }
+                        }
+                        .item-name {
+                            font-size: 16;
+                            font-weight: 600;
+                        }
+                        .author {
+                            display: flex;
+                            gap: 5px;
+                            align-items: center;
+                            span {
+                                font-size: 14px;
+                            }
+                        }
+                        .date {
+                            display: flex;
+                            gap: 5px;
+                            align-items: center;
+                            span {
+                                font-size: 14px;
+                            }
+                        }
+                    }
+                }
             }
             .info {
                 background-color: #fff;
